--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -921,7 +921,7 @@ paths:
 
         The image below shows the place in the response payload of the person search POST call where the id for getting the original list entry can be found.
 
-        ![](../assets/images/originallistid.png)
+        ![list_entry_url](../assets/images/originallistid.png)
 
         You can try out the call using the id: "13" in the "Body" of the call.
       parameters: []
@@ -1009,7 +1009,7 @@ paths:
 
         The image below shows the place in the response payload of the person search POST call where the id for getting the original list entry can be found.
 
-        ![](../assets/images/originallistid.png)
+        ![list_entry_url](../assets/images/originallistid.png)
 
         You can try out the call using the id: "10214" in the "Body" of the call. 
       security:
