--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -1064,7 +1064,7 @@ components:
       required:
         - full_name
       x-tags:
-        - Object Descriptions
+        - Payload Definitions
     searchConfig:
       title: search config
       type: object
@@ -1084,7 +1084,7 @@ components:
       required:
         - sanction_lists
       x-tags:
-        - Object Descriptions
+        - Payload Definitions
     personSearch:
       title: personSearch
       type: object
@@ -1099,7 +1099,7 @@ components:
         - search_config
         - person
       x-tags:
-        - Object Descriptions
+        - Payload Definitions
     organizationSearchAttributes:
       title: organizationSearchAttributes
       type: object
@@ -1115,7 +1115,7 @@ components:
       required:
         - name
       x-tags:
-        - Object Descriptions
+        - Payload Definitions
     organizationSearch:
       title: organizationSearch
       type: object
@@ -1129,7 +1129,7 @@ components:
         - search_config
         - organization
       x-tags:
-        - Object Descriptions
+        - Payload Definitions
     organization:
       title: organization
       type: object
@@ -1154,7 +1154,7 @@ components:
         - aliases
         - list_entry_url
       x-tags:
-        - Object Descriptions
+        - Payload Definitions
     locationSearchResult:
       title: locationSearchResult
       type: object
@@ -1172,7 +1172,7 @@ components:
         - persons
         - organizations
       x-tags:
-        - Object Descriptions
+        - Payload Definitions
     addressSearch:
       title: addressSearch
       type: object
@@ -1187,7 +1187,7 @@ components:
         - search_config
         - address
       x-tags:
-        - Object Descriptions
+        - Payload Definitions
     person:
       title: person
       type: object
@@ -1235,7 +1235,7 @@ components:
         - nationality
         - list_entry_url
       x-tags:
-        - Object Descriptions
+        - Payload Definitions
     address:
       title: address
       type: object
@@ -1258,7 +1258,7 @@ components:
       required:
         - country_code
       x-tags:
-        - Object Descriptions
+        - Payload Definitions
     sdn:
       title: sdn
       type: object
@@ -1327,7 +1327,7 @@ components:
           items:
             type: string
       x-tags:
-        - Object Descriptions
+        - Payload Definitions
     cfsp:
       title: cfsp
       type: object
@@ -1571,7 +1571,7 @@ components:
           type: string
       description: Output payload of the entry from the CFSP sanction list
       x-tags:
-        - Object Descriptions
+        - Payload Definitions
   securitySchemes:
     API Key:
       name: x-api-key
