--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -80,7 +80,7 @@ paths:
         This API call allows you to perform a search through the desired sanction lists for a person. The search results returned are a list of all entries from the sanction lists which match to the input along with the degree of the match. 
 
         <!-- theme: warning -->
-        > Please enter "sanction_api_cubemos" as the x-api-key in the "Try-it out" section and hit send to get the results
+        > Please enter "sanction_api_cubemos" as the x-api-key in the "Header" of the "Try-it out" section and hit send to get the results
       requestBody:
         content:
           application/json:
@@ -229,7 +229,7 @@ paths:
         This API call allows you to perform a search for sanction lists entries of organizations. The result is a list of all entries which match to the inputs along with the degree of the match (which indicates the confidence if the desired match was found with a percentage representation).
 
         <!-- theme: warning -->
-        > Please enter "sanction_api_cubemos" as the x-api-key in the "Try-it out" section and hit send to get the results
+        > Please enter "sanction_api_cubemos" as the x-api-key in the "Header" of the "Try-it out" section and hit send to get the results
       security:
         - API Key: []
       tags:
@@ -308,7 +308,7 @@ paths:
         This API call allows you to perform a sanction list search for all the sanctioned entities at the address or location of interest.
 
         <!-- theme: warning -->
-        > Please enter "sanction_api_cubemos" as the x-api-key in the "Try-it out" section and hit send to get the results
+        > Please enter "sanction_api_cubemos" as the x-api-key in the "Header" of the "Try-it out" section and hit send to get the results
       security:
         - API Key: []
       tags:
@@ -928,7 +928,7 @@ paths:
         Get the entry from the official [CFSP sanction list](https://eeas.europa.eu/headquarters/headquarters-homepage_en/8442/Consolidated%20list%20of%20sanction) based on the result from the search calls. 
 
         <!-- theme: warning -->
-        > Please enter "sanction_api_cubemos" as the x-api-key and "13" as an example ID in the "Body"in the "Try-it out" section and hit send to get the results
+        > Please enter "sanction_api_cubemos" as the x-api-key in the "Header" and "13" as the ID in the "Path" of the "Try-it out" section and hit send to get the results
       parameters: []
       security:
         - API Key: []
@@ -1013,7 +1013,7 @@ paths:
         Get the entry from the official [SDN sanction lists](https://www.treasury.gov/resource-center/sanction/sdn-list/pages/default.aspx) based on the result from the POST calls. 
 
         <!-- theme: warning -->
-        > Please enter "sanction_api_cubemos" as the x-api-key and "10214" as an example ID in the "Body"in the "Try-it out" section and hit send to get the results
+        > Please enter "sanction_api_cubemos" as the x-api-key in the "Header" and "10214" as the ID in the "Path" of the "Try-it out" section and hit send to get the results
       security:
         - API Key: []
       tags:
